--- a/responsive/src/index.html
+++ b/responsive/src/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>首页</title>
+    <!-- build:css css/combined.css -->
     <link rel="stylesheet" href="css/normalize.css" >
     <link rel="stylesheet" href="js/vendor/owl.carousel.2.1.0/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="js/vendor/owl.carousel.2.1.0/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/main.css" >
+    <!-- endbuild -->
 </head>
 <body>
 <!--[if lte IE8]>
@@ -62,7 +64,6 @@
             </div>
         </div>
     </div>
-
     <!--广告部分-->
     <div class="ad">
         <div class="owl-carousel owl-theme">
@@ -113,7 +114,7 @@
 
     <!--公告-->
     <div class="notice clearfix">
-        <a href="#">2015-12-31</span>元旦期间业务受理及公告</a>
+        <a href="#"><span>2015-12-31</span>元旦期间业务受理及公告</a>
         <a href="#" class="more">更多公告</a>
     </div>
 
@@ -289,11 +290,13 @@
 </footer>
 
 
+<!-- build:js js/combined.js -->
 <script src="js/modernizr.js"></script>
 <script src="js/vendor/jquery.min.js"></script>
 <script src="js/vendor/owl.carousel.2.1.0/owl.carousel.min.js"></script>
 <script src="js/vendor/picturefill.min.js"></script>
 <script src="js/main.js"></script>
+<!-- endbuild -->
 
 
 </body>
